[package]
name = "rpeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
array2 = { version = "0.1.0", path = "../array2" }
bitpack = { version = "0.1.0", path = "../bitpack" }
clap = { version = "4.0.18", features = ["derive"] }
csc411_arith = "0.1.0"
csc411_image = "0.3.1"
csc411_rpegio = "0.3.1"
num = "0.4.0"
round = "0.1.2"
scan_fmt = "0.2.6"
